--- a/talks/talks/2024_01-quals-tidalsim.jinja2
+++ b/talks/talks/2024_01-quals-tidalsim.jinja2
@@ -96,14 +96,23 @@ import 'reveal.js/plugin/highlight/monokai.css'
 <section>
   <section class="center">
     <h2>7. Thesis Outline</h2>
-  This semester: v0.1 to v1
+  <!--This semester: v0.1 to v1
   Summer: v1 to v2 (improvements in next section)
   Next semester: Leverage v2 for case studies
-  Spring 2025: Finish thesis writing + graduate
+  Spring 2025: Finish thesis writing + graduate-->
   </section>
 
   <section>
     <h2>Outline</h2>
+    <ol class="small">
+      <li class="fragment">Motivation and Background</li>
+      <li class="fragment">Implementation and Evaluation of TidalSim v0.1</li>
+      <li class="fragment">Implementation and Evaluation of TidalSim v1
+        <ul>
+          <li>
+        </ul>
+      </li>
+    </ol>
   </section>
 </section>
 
