--- a/talks/talks/quals/what.jinja2
+++ b/talks/talks/quals/what.jinja2
@@ -31,9 +31,9 @@
 
   <ol>
     <li class="fragment">Implementation of TidalSim</li>
-    <li class="fragment">Evaluation of TidalSim for performance and power estimation on large workloads
+    <li class="fragment">Evaluation of TidalSim for performance estimation on large workloads
     <ul style="font-size: 1.4rem;"><li>Embench, GAP, SPEC, HyperProtoBench, MLPerf, CloudSuite</li></ul>
     </li>
-    <li class="fragment">Case studies for hardware DSE, power macromodel training, and coverpoint synthesis</li>
+    <li class="fragment">Case studies for hardware DSE <!--power macromodel training,--> and coverpoint synthesis</li>
   </ol>
 </section>
