redo background section

--- a/talks/talks/2024_01-quals-tidalsim.jinja2
+++ b/talks/talks/2024_01-quals-tidalsim.jinja2
@@ -79,9 +79,10 @@ import 'reveal.js/plugin/highlight/monokai.css'
 {% include "talks/quals/background.jinja2" %}
 </section>
 
-<section>
-{% include "talks/quals/whats_new.jinja2" %}
-</section>
+<!-- these slides have been replaced by a single slide in the background section -->
+<!--<section>
+{# include "talks/quals/whats_new.jinja2" #}
+</section>-->
 
 <section>
 {% include "talks/quals/how_pt1-tidalsim_v1.jinja2" %}
